// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PingListExpandedRow doesn't render list items if the body field is undefined 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={Array []}
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow doesn't render list items if the http field is undefined 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={Array []}
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow doesn't render list items if the response field is undefined 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={Array []}
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders error information when an error field is present 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="danger"
    >
      <EuiDescriptionList
        listItems={
          Array [
            Object {
              "description": <EuiText>
                Forbidden
              </EuiText>,
              "title": "Error",
            },
            Object {
              "description": <React.Fragment>
                <BodyDescription
                  body={
                    Object {
                      "bytes": 1200000,
                      "content": "<http><head><title>The Title</title></head><body></body></http>",
                      "hash": "testhash",
                    }
                  }
                />
                <EuiSpacer
                  size="s"
                />
                <BodyExcerpt
                  content="<http><head><title>The Title</title></head><body></body></http>"
                />
              </React.Fragment>,
              "title": "Response Body",
            },
          ]
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders expected elements for valid props 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={
          Array [
            Object {
              "description": <React.Fragment>
                <BodyDescription
                  body={
                    Object {
                      "bytes": 1200000,
                      "content": "<http><head><title>The Title</title></head><body></body></http>",
                      "hash": "testhash",
                    }
                  }
                />
                <EuiSpacer
                  size="s"
                />
                <BodyExcerpt
                  content="<http><head><title>The Title</title></head><body></body></http>"
                />
              </React.Fragment>,
              "title": "Response Body",
            },
          ]
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`PingListExpandedRow renders link to docs if body is not recorded but it is present 1`] = `
<div
  class="euiFlexGroup css-kz3qdw-euiFlexGroup-l-flexStart-stretch-column"
>
  <div
    class="euiFlexItem css-9sbomz-euiFlexItem-grow-1"
  >
    <div
      class="euiPanel euiPanel--primary euiPanel--paddingMedium euiCallOut euiCallOut--primary css-1r1yx9p-euiPanel-none-m-primary-euiCallOut"
    >
      <div
        class="euiText css-f9i6fj-euiText-s-euiTextColor-default"
      >
        <dl
          class="euiDescriptionList css-uznago-euiDescriptionList-row-left"
          data-type="row"
        >
          <dt
            class="euiDescriptionList__title css-xxhp2h-euiDescriptionList__title-row-normal-s"
          >
            Response Body
          </dt>
          <dd
            class="euiDescriptionList__description css-zdkgi8-euiDescriptionList__description-row-normal"
          >
            <div
              class="euiText css-1py2xv4-euiText-m"
            >
              Body size is 1MB.
            </div>
            <div
              class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
            />
            <div
              class="euiText css-1py2xv4-euiText-m"
            >
              Body not recorded. Read our 
              <a
                class="euiLink css-4ljoze-euiLink-primary"
                data-test-subj="syntheticsDocLinkForBodyDocsLink"
                href="https://www.elastic.co/guide/en/beats/heartbeat/current/configuration-heartbeat-options.html#monitor-http-response"
                rel="noopener noreferrer"
                target="_blank"
              >
                docs
                <span
                  class="css-1yz4dya-EuiExternalLinkIcon"
                  data-euiicon-type="popout"
                >
                  External link
                </span>
                <span
                  class="css-gb1zbv-euiScreenReaderOnly"
                >
                  (opens in a new tab or window)
                </span>
              </a>
               for more information on recording response bodies.
            </div>
          </dd>
        </dl>
      </div>
    </div>
  </div>
</div>
`;

exports[`PingListExpandedRow shallow renders link to docs if body is not recorded but it is present 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <EuiCallOut
      color="primary"
    >
      <EuiDescriptionList
        listItems={
          Array [
            Object {
              "description": <React.Fragment>
                <BodyDescription
                  body={
                    Object {
                      "bytes": 1200000,
                      "hash": "testhash",
                    }
                  }
                />
                <EuiSpacer
                  size="s"
                />
                <DocLinkForBody />
              </React.Fragment>,
              "title": "Response Body",
            },
          ]
        }
      />
    </EuiCallOut>
  </EuiFlexItem>
</EuiFlexGroup>
`;
